# cross-platform-llm-client

./: .firebaserc  .gitignore  README.md  firebase.json  pubspec.yaml
.github/workflows/: sync.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/orailnoor/privatelm/: BootReceiver.kt  MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: chat_controller.dart  home_controller.dart  model_controller.dart  settings_controller.dart
lib/core/: constants.dart
lib/ffi/: sd_ffi_bindings.dart
lib/models/: chat_message.dart
lib/services/: download_native.dart  image_generation_notification_service.dart  inference_android.dart  inference_service.dart  local_image_service.dart
lib/views/: chat_view.dart  home_view.dart  log_view.dart  model_view.dart  server_view.dart  settings_view.dart  task_view.dart
lib/widgets/: attachment_preview.dart  chat_bubble.dart  image_viewer.dart
local_plugins/sd_flutter_android/android/: CMakeLists.txt  build.gradle
local_plugins/sd_flutter_android/android/src/main/cpp/: sd_jni_wrapper.cpp
local_plugins/sd_flutter_android/lib/: sd_flutter_android.dart
local_plugins/sd_flutter_android/scripts/: build_gpu_backends_wsl.sh
test/: widget_test.dart
web/: index.html  manifest.json
